--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
         <meta charset="utf-8">
         <title>Project: Travel webpage</title>
@@ -10,3 +11,4 @@
             body {background-color: rgb(237, 202, 237);}
         </style>
     </head>
+</html>
