--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
         #reasonone {background-color: blue;}
         #reasontwo {color: green;}
         #reasonthree {color: brown;}
+        .reasons {font-size: 150px}
             h1 {color:white;}
             body {background-color: rgb(237, 202, 237);}
         </style>
