--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <meta charset="utf-8">
-        <title>Project: Travel webpage</title>
-        <style>
+    <meta charset="utf-8">
+    <title>Project: Travel webpage</title>
+    <style>
         #reasonone {background-color: blue;}
         #reasontwo {color: green;}
         #reasonthree {color: brown;}
-        .reasons {font-size: 150px}
-        .reasons {font-weight: 150px}
-            h1 {color:white;}
-            h1 {font-style: Roman}
-            body {background-color: rgb(237, 202, 237);}
-        </style>
-    </head>
+        .reasons {
+            font-size: 150px;
+            font-weight: bold;
+        }
+        h1 {
+            color: white;
+            font-family: 'Times New Roman', serif;
+        }
+        body {
+            background-color: rgb(237, 202, 237);
+        }
+    </style>
+</head>
 </html>
